feat: add patient-context entities, then move to Java 25 / Spring Boot 4
Two pieces of work that cannot be cleanly separated into two commits: the
23 resource ITs each carry both a new test and a Boot 4 import change, and
pom.xml carries both the coverage configuration and the framework upgrade.
Splitting them would leave the first commit unbuildable, so they land
together and are described separately below.

--- Patient-context entities ---

patient.jdl is now the model of record for the whole patient domain, and
lives here because this service owns it. tools/render-entity-configs.mjs
renders it into both repos' .jhipster/*.json, deliberately preserving
whatever each repo already declares for entityTableName, clientRootFolder
and microserviceName — renaming a collection there would silently orphan
every document in it.

Six new entities with document, repository, service, resource and a full
CRUD *ResourceIT: Professional, Visitation, Emergency, ActivityLog,
CarePlanItem, Allergy. Eight extended: Profile, Membership, ClinicalCase
(caseNumber, title, closedAt, and TREATMENT added to CaseStatus), Stat,
Medication, Report, Task, PersonalDocument. Vitals are Stat, by decision —
there is no separate Vital entity.

Every patient-scoped collection endpoint gains an optional ?patientId=,
backed by a findByPatientId repository method. Without it the dashboard had
to fetch every patient's records and filter in the browser, which is both
slow and a disclosure risk. GET /api/profiles/email/{email} is the
dashboard's entry point into a record: the gateway issues tokens keyed on
email, so email is the only identifier the client holds before it has
loaded anything.

Coverage is now measured and gated. Unit and integration runs each covered
a different half of the service, so neither report meant much alone;
jacoco:merge produces one figure and jacoco:check fails the build below 80%
instruction and 80% branch. Adds unit tests for LoggingAspect, KafkaConsumer
and CRLFLogConverter, 