@@ -1,6 +1,7 @@
 package net.jojoaddison.config;
 
 import java.util.Collections;
+import java.util.Map;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.DisposableBean;
@@ -29,7 +30,7 @@ public class MongoDbTestContainer implements InitializingBean, DisposableBean {
         if (null == mongodbContainer) {
             mongodbContainer =
                 new MongoDBContainer("mongo:7.0.4")
-                    .withTmpFs(Collections.singletonMap("/testtmpfs", "rw"))
+                    .withTmpFs(Map.of("/testtmpfs", "rw"))
                     /* .withCommand(
                     "--nojournal --wiredTigerCacheSizeGB 0.25 --wiredTigerCollectionBlockCompressor none --slowOpSampleRate 0 --setParameter ttlMonitorEnabled=false --setParameter diagnosticDataCollectionEnabled=false --setParameter logicalSessionRefreshMillis=6000000 --setParameter enableFlowControl=false --setParameter oplogFetcherUsesExhaust=false --setParameter disableResumableRangeDeleter=true --setParameter enableShardedIndexConsistencyCheck=false --setParameter enableFinerGrainedCatalogCacheRefresh=false --setParameter readHedgingMode=off --setParameter loadRoutingTableOnStartup=false --setParameter rangeDeleterBatchDelayMS=2000000 --setParameter skipShardingConfigurationChecks=true --setParameter syncdelay=3600"
                 )
